fixed some text align issues throughout the website

--- a/portfolio.css
+++ b/portfolio.css
@@ -466,8 +466,12 @@ body{
   .sm-sc-center{
     text-align: center;
   }
+  
+  .sm-sc-left{
+    text-align: left;
+  }
 
-  .sm-sc-center img{
+  .sm-sc-left img{
     display: inline-block;
   }
 }
